fixed scroll problem, added visible/invisible password button for login page

--- a/frontend/src/app/layout/shell/shell.component.css
+++ b/frontend/src/app/layout/shell/shell.component.css
@@ -121,7 +121,8 @@
     /* przewijanie tylko tresci */
     .content {
       height: 100dvh;
-      overflow: hidden;
+      overflow-y: auto;
+      overflow-x: hidden;
       padding: 24px;
       max-width: 1120px;
       margin: 0 auto;
